--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "db-mongoose-schemas",
-  "version": "1.0.0",
-  "description": "This assignment will give you chance to practise writing Mongoose Schemas",
-  "main": "index.js",
-  "scripts": {
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-  },
-  "devDependencies": {
-    "prettier": "^2.1.2"
-  }
+	"name": "db-mongoose-schemas",
+	"version": "1.0.0",
+	"description": "This assignment will give you chance to practise writing Mongoose Schemas",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js"
+	},
+	"keywords": [],
+	"author": "Lace",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"mongoose": "^6.2.9"
+	},
+	"devDependencies": {
+		"prettier": "^2.1.2"
+	}
 }
